platform/cd/python-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  labels:
    app: python-service
spec:
  selector:
    app: python-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
