platform/cd/python-service/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-service
  labels:
    app: python-service
spec:
  ingressClassName: traefik
  rules:
    - host: python-service.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-service
                port:
                  number: 8080
